example/errors/interpret/mutate_immutable_variable.box
//set x: int = 5;
//
//x = 6; // should not work

set x: int;


x = 5;





x = 6; // should not work too
